# USB_DVP

./: .cproject  .gitignore  .project  .template  serial_jpeg.py
LCD/: lcd.c  lcd.h  spi.c  spi.h
QT/Handler_QT/: CMakeLists.txt  libusb.h  mainwindow.cpp  mainwindow.h
SRC/Debug/: debug.c  debug.h
SRC/Ld/: Link.ld
USB/: ch32v30x_usbhs_device.c  ch32v30x_usbhs_device.h
User/: Headfile.h  main.c  ov.c  ov.h  usb_routine.c  usb_routine.h
